Fix dropdown bar text sizing and the :after causing horizontal scroll

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -277,7 +277,8 @@ header {
                     &::before {
                         content: "";
                         right: 0;
-                        width: 2000px;
+                        min-width: 100vw;
+                        max-width: 100vw;
                         display: block;
                         position: absolute;
                         height: 40px;
@@ -287,8 +288,9 @@ header {
                     }
                     &::after {
                         content: "";
-                        left: 0;
-                        width: 2000px;
+                        left: -10px;
+                        min-width: 100vw;
+                        max-width: 100vw;
                         height: 40px;
                         display: block;
                         position: absolute;
@@ -301,11 +303,14 @@ header {
                         margin-left: 20px;
                         li {
                             display: inline-block;
-                            font-size: .8125rem;
-                            line-height: 2.5rem;
+                            a {
+                                font-size: .8125rem;
+                                line-height: 2.5rem;
+                            }
                         }
                         li + li::before {
                             content: "-";
+                            line-height: 2.5rem;
                             padding-right: 20px;
                             padding-left: 20px;
                         }
@@ -370,6 +375,9 @@ header {
                         li {
                             font-size: 1rem;
                         }
+                    }
+                    &::after {
+                        left: -30px;
                     }
                 }
                 
